@@ -4,6 +4,7 @@
 	
 2010-01-19  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
+	* Fixed bug: #13278: "New" and "Browse" buttons don't seem to work properly after Drag&Drop
 	* Fixed bug: #13276: makeLocalRecord pointer isn't updated during drag&drop
 	* Fixed bug: #13275: sortable_updatePasteButtons not needed anymore
 	* Fixed bug: #11520: DS Tag for Hiding Field Preview Data (part 2)
